test/checks/missingNetworkPolicy/failure.netpol_missing_egress_in_policytypes.yaml
# This failes because the NetworkPolicy `policyTypes` lacks `Egress`,
# without which the egress rules will not be applied.
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  labels:
    security: medium
spec:
  containers:
  - name: nginx
    image: nginx:1.23.0
    ports:
    - containerPort: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test
spec:
  podSelector:
    matchLabels:
      security: medium
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - protocol: TCP
      port: 8080
  egress:
  - to:
    - podSelector:
        matchLabels:
          # Allow outbound with other medium-security pods.
          security: medium
    ports:
    - protocol: TCP
      port: 80
