test/checks/missingNetworkPolicy/failure.netpol_missing_egress_rules.yaml
# This fails because the NetworkPolicy lacks egress rules.
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  labels:
    security: medium
spec:
  containers:
  - name: nginx
    image: nginx:1.23.0
    ports:
    - containerPort: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test
spec:
  podSelector:
    matchLabels:
      security: medium
  policyTypes:
  - Egress
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - protocol: TCP
      port: 8080
