test/checks/missingNetworkPolicy/failure.netpol_targets_wrong_pod_label.yaml
# This fails because the NetworkPolicy matches a label the pod does not have
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  labels:
    security: medium
spec:
  containers:
  - name: nginx
    image: nginx:1.23.0
    ports:
    - containerPort: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test
spec:
  podSelector:
    matchLabels:
      security: high
  policyTypes:
  - Egress
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - protocol: TCP
      port: 8080
  egress:
  - to:
    - podSelector:
        matchLabels:
          # Allow outbound with other medium-security pods.
          security: medium
    ports:
    - protocol: TCP
      port: 80
